# Helm2025

./: .gitignore  .gitmodules  CMakeLists.txt  Helm.sln  README.md  build.ps1  helm-installer.iss  helm.desktop  helm2025-installer.iss
.github/workflows/: ci.yml.disabled
concurrentqueue/: CMakeLists.txt
images/: helm_debian_icon.xpm
mopo/: CMakeLists.txt
mopo/src/: alias.h  biquad_filter.cpp  bit_crush.h  circular_queue.h  common.h  envelope.cpp  ladder_filter.cpp  memory.h  operators.h  oscillator.cpp  state_variable_filter.cpp  trigger_operators.cpp  voice_handler.cpp  wave.h
patches/Factory Presets/Arp/: OZ Prarie Arp.helm2025  SF Arp 1.helm2025  SF Arp 2.helm2025
patches/Factory Presets/Bass/: COA Killer Chipsound Pluck 1.helm2025  COA Killer Chipsound Pluck 2.helm2025
patches/Factory Presets/Keys/: COA 90 Videogame Pluck.helm2025  COA Broken Digital Organ.helm2025  COA Plucked Digital String.helm2025  COA Post Funk Keys 1.helm2025  COA Post Funk Keys 2.helm2025  MT Organ 1.helm2025  MT Organ 2.helm2025  MT Stuttering Organ.helm2025  MT Toy Piano.helm2025  OZ Drifter 1.helm2025  OZ Drifter 2.helm2025  OZ Drifter 3.helm2025  OZ Homebase.helm2025  OZ Natures Best.helm2025  OZ Portamento One.helm2025  OZ Prarie.helm2025  OZ Skewd with Noise.helm2025  OZ Skewd.helm2025  SF Brass CC2 A.helm2025  SF Brass CC2.helm2025  SF Piano 1.helm2025  SF Piano 2.helm2025  SF Piano 3.helm2025  SF Piano 4.helm2025  SF Piano Tremolo 1.helm2025  SF Piano Tremolo 2.helm2025
patches/Factory Presets/Lead/: CM Super(er) Saw.helm2025  OZ Platinum Poly.helm2025
patches/Factory Presets/Pad/: CM Epic.helm2025  CM Soothing.helm2025  CM Stars.helm2025  COA Ambient Metallic.helm2025  COA Broken Old Analog.helm2025  COA Crispy Pad Organ.helm2025  COA Digital Enigma.helm2025  COA Hard Brass Synth Ensemble.helm2025  COA Lofi Soft Pad 1.helm2025  COA Lofi Soft Pad 2.helm2025  COA Lofi Soft Pad 3.helm2025  COA Pulsating Pad.helm2025  COA Resonant Pad.helm2025  COA Sad Scifi Strings 1.helm2025  COA Sad Scifi Strings 2.helm2025  COA Sad Scifi Strings 3.helm2025  COA Scifi Interference.helm2025  COA Soft Scifi Pad 1.helm2025  COA Soft Scifi Pad 2.helm2025  COA Soft Scifi Pad 3.helm2025  COA Soft Scifi Pad 4.helm2025  COA Soft Scifi Pad 5.helm2025  MT Talk Radio.helm2025  (+13 more)
patches/New Factory Presets/: README.md
src/common/: border_bounds_constrainer.cpp  border_bounds_constrainer.h  compute_cache.h  file_list_box_model.cpp  file_list_box_model.h  helm2025_common.cpp  helm2025_common.h  helm_common.cpp  helm_common.h  load_save.cpp  load_save.h  midi_event.h  midi_manager.cpp  midi_manager.h  midi_queue.h  object_pool.h  simd_utils.h  startup.cpp  startup.h  synth_base.cpp  synth_base.h  synth_gui_interface.cpp  synth_gui_interface.h  user_preferences.cpp  user_preferences.h
src/editor_components/: bpm_slider.cpp  bpm_slider.h  envelope_editor_simd.h  filter_response.cpp  filter_response.h  filter_selector.cpp  filter_selector.h  global_tool_tip.cpp  global_tool_tip.h  graphical_envelope.cpp  graphical_envelope.h  graphical_step_sequencer.cpp  graphical_step_sequencer.h  midi_keyboard.cpp  midi_keyboard.h  modulation_button.cpp  modulation_button.h  modulation_highlight.cpp  modulation_highlight.h  modulation_meter.cpp  modulation_meter.h  modulation_slider.cpp  modulation_slider.h  open_gl_background.cpp  open_gl_background.h  open_gl_component.cpp  open_gl_component.h  open_gl_envelope.cpp  open_gl_envelope.h  open_gl_modulation_meter.cpp  open_gl_modulation_meter.h  open_gl_oscilloscope.cpp  open_gl_oscilloscope.h  open_gl_peak_meter.cpp  open_gl_peak_meter.h  open_gl_wave_viewer.cpp  open_gl_wave_viewer.h  oscilloscope.cpp  oscilloscope.h  overlay.h  (+22 more)
src/editor_sections/: about_section.cpp  about_section.h  arp_section.cpp  arp_section.h  bpm_section.cpp  bpm_section.h  contribute_section.cpp  contribute_section.h  delay_section.cpp  delay_section.h  delete_section.cpp  delete_section.h  distortion_section.cpp  distortion_section.h  dynamic_section.cpp  dynamic_section.h  envelope_section.cpp  envelope_section.h  extra_mod_section.cpp  extra_mod_section.h  feedback_section.cpp  feedback_section.h  filter_section.cpp  filter_section.h  formant_section.cpp  formant_section.h  full_interface.cpp  full_interface.h  lfo_section.cpp  lfo_section.h  mixer_section.cpp  mixer_section.h  modulation_manager.cpp  modulation_manager.h  noise_section.cpp  noise_section.h  open_gl_modulation_manager.cpp  open_gl_modulation_manager.h  oscillator_section.cpp  oscillator_section.h  (+22 more)
src/look_and_feel/: browser_look_and_feel.cpp  browser_look_and_feel.h  colors.cpp  colors.h  default_look_and_feel.cpp  default_look_and_feel.h  fonts.cpp  fonts.h  modulation_look_and_feel.cpp  modulation_look_and_feel.h  shaders.cpp  shaders.h  text_look_and_feel.cpp  text_look_and_feel.h
src/plugin/: helm2025_editor.cpp  helm2025_editor.h  helm2025_editor_simd.h  helm2025_plugin.cpp  helm2025_plugin.h  helm2025_plugin_simd.h  helm_editor_simd.h  helm_plugin_simd.h  value_bridge.h
src/standalone/: helm2025_computer_keyboard.cpp  helm2025_computer_keyboard.h  helm2025_editor.cpp  helm2025_editor.h  main.cpp
src/synthesis/: audio_pipeline_manager.h  dc_filter.cpp  dc_filter.h  detune_lookup.cpp  detune_lookup.h  fixed_point_oscillator.cpp  fixed_point_oscillator.h  fixed_point_wave.cpp  fixed_point_wave.h  gate.cpp  gate.h  helm2025_constants.h  helm2025_engine.cpp  helm2025_engine.h  helm2025_engine_simd.h  helm2025_engine_simd_pipeline.h  helm2025_lfo.cpp  helm2025_lfo.h  helm2025_midi_handler.cpp  helm2025_module.cpp  helm2025_module.h  helm2025_oscillators.cpp  helm2025_oscillators.h  helm2025_utils.h  helm2025_voice_handler.cpp  helm2025_voice_handler.h  helm2025_voice_handler_simd.h  helm_constants.h  helm_engine.cpp  helm_engine.h  helm_engine_simd.h  helm_engine_simd_pipeline.h  helm_lfo.cpp  helm_midi_handler.cpp  helm_oscillators.cpp  helm_utils.h  helm_voice_handler_simd.h  lock_free_pipeline.h  noise_oscillator.cpp  noise_oscillator.h  (+17 more)
tests/: test_parameter_batch_interpolator.cpp  test_parameter_interpolator.cpp
(+29 files in other folders)
